# school-campus

./: .gitignore  Dockerfile  HOSTING_GUIDE.md  backend_test.py  render.yaml
backend/: .env.production  .gitignore  Dockerfile  db-browser.html  fetch_users.py  logout_complete.py  pyproject.toml  requirements.txt  seed_principal.py  server.py
frontend/: .env.production  app.json  google-services.json  logout_complete.tsx  package-lock.json  package.json
frontend/app/: _layout.tsx  index.tsx
frontend/app/(app)/: _layout.tsx  assignments.tsx  attendance.tsx  classes.tsx  dashboard.tsx  fees.tsx  leave.tsx  logs.tsx  marks.tsx  notifications.tsx  profile.tsx  timetable.tsx  users.tsx
frontend/app/(auth)/: login.tsx
frontend/src/components/: Loader.tsx  UniversalDatePicker.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/utils/: api.ts
